base/k8s/registry/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry
  namespace: docker-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry
  template:
    metadata:
      labels:
        app: docker-registry
    spec:
      containers:
      - name: docker-registry
        image: docker.io/library/registry:2.8.1
        ports:
        - name: https
          containerPort: 5000
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /etc/docker/registry
          readOnly: true
      volumes:

      - name: config
        secret:
          secretName: config-secret
